infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pamasmma
  labels:
    name: pamasmma
