infra/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
  namespace: pamasmma
spec:
  selector:
    app: orchestrator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
